# tutorials

./: .gitignore  01_kubernetes_beginner.md  06_deploy_nextjs_to_gcp.md  07_develop_ai_agent_with_google_adk.md  08_tower_dev.md  10_apigee.md  11_oauth2.md  12_oidc_connect.md  13_migration_from_haproxy_to_aws_managed_services.md  14_developing_a_saas_using_aws_and_ecs_fargate.md  15_ci_cd_gitlab_ecr.md  16_amazon_q.md  17_intent_based_dev_vs_code_copilot.md  18_terraform.md  18_three_laws_ai_development_diagram.md  19_google_cloud_sql.md  20_google_iam.md  21_google_cloud_run.md  22_google_vertex_agent_engine.md  23-modern-python-dev-toolkit.md  23_google_agent_adk.md  23_google_agent_adk.md.bak  24-data-extraction-pipeline-with-adk.md  24-mcp.md  25-video-transcription-with-gemini-2-5-old.md  25-video-transcription-with-gemini-2-5.md  26-bruno.md  28-a2a.md  29_adk_simple_tutorial.md  30_how_to_configure_vertex_ai_for_adk.md  31_observability_llm_adk_vertex.md  31_observability_llm_adk_vertex_new.md  32_generative_ai_context_engineering.md  33_ag_ui.md  34_agentic_ai_design_patterns.md  35_context_engineering_context_datamodel.md  36_prompt_engineering_for_everiday_life_to_business.md  37-contex-engineering-for-sales-agent.md  37-contex.md  38-ai-risk-management.md  (+23 more)
.prompts/: 00_mermaid.md
07_agent/: 01_chapter.md  02_chapter.md  03_chapter.md  (+10 more)
tutorial/24_data_extraction_pipeline_with_adk/: ADK_COMMAND_COMPATIBILITY.md  ADK_COMPLETION_SUMMARY.md  ADK_COMPLIANCE_REVIEW.md  ADK_CONSTRAINT_RESOLUTION.md  CLEANUP_SUMMARY.md  MULTI_AGENT_ANALYSIS.md  Makefile  PIPELINE_IMPROVEMENTS_SUMMARY.md  README.md  RECOMMENDATIONS.md  architecture_comparison.md  demo_multi_agent.py  pyproject.toml  sample_contract.txt  test_multi_agent_pipeline.py
tutorial/24_data_extraction_pipeline_with_adk/examples/: basic_contact_extraction.py  legal_document_analysis.py
tutorial/24_data_extraction_pipeline_with_adk/sequential_contract_pipeline/: agent.py
tutorial/24_data_extraction_pipeline_with_adk/src/adk_data_extraction/: __init__.py
tutorial/24_data_extraction_pipeline_with_adk/src/adk_data_extraction/examples/: README.md  __init__.py  basic_contact_extraction.py  contact_demo.py  improved_multi_agent_pipeline.py  legal_document_analysis.py  multi_agent_pipeline.py  sequential_contract_pipeline.py  smart_document_extraction_pipeline.py  test_adk_discovery.py
tutorial/24_data_extraction_pipeline_with_adk/src/adk_data_extraction/examples/basic_contact_extraction/: README.md  __init__.py  agent.py  cli.py
tutorial/24_data_extraction_pipeline_with_adk/src/adk_data_extraction/examples/basic_contact_extraction/agents/: __init__.py  schemas.py
tutorial/24_data_extraction_pipeline_with_adk/src/adk_data_extraction/examples/basic_contact_extraction/schemas/: __init__.py
tutorial/24_data_extraction_pipeline_with_adk/src/adk_data_extraction/examples/hierarchical_document_pipeline/: README.md  __init__.py  agent.py  cli.py
tutorial/24_data_extraction_pipeline_with_adk/src/adk_data_extraction/examples/hierarchical_document_pipeline/schemas/: __init__.py
tutorial/24_data_extraction_pipeline_with_adk/src/adk_data_extraction/examples/hierarchical_document_pipeline/sub_agents/: __init__.py
tutorial/24_data_extraction_pipeline_with_adk/src/adk_data_extraction/examples/hierarchical_document_pipeline/tools/: __init__.py
tutorial/24_data_extraction_pipeline_with_adk/src/adk_data_extraction/examples/legal_document_analysis/: README.md  __init__.py  agent.py  cli.py
tutorial/24_data_extraction_pipeline_with_adk/src/adk_data_extraction/examples/legal_document_analysis/agents/: __init__.py
tutorial/24_data_extraction_pipeline_with_adk/src/adk_data_extraction/examples/legal_document_analysis/schemas/: __init__.py
tutorial/24_data_extraction_pipeline_with_adk/src/adk_data_extraction/examples/sequential_contract_pipeline/: README.md  __init__.py  agent.py  cli.py
tutorial/24_data_extraction_pipeline_with_adk/src/adk_data_extraction/examples/sequential_contract_pipeline/data/: __init__.py
tutorial/24_data_extraction_pipeline_with_adk/src/adk_data_extraction/examples/sequential_contract_pipeline/schemas/: __init__.py
(+44 files in other folders)
